docs/platforms/winpack_dldt/2021.1/sub.md
# Subtree Keyword Index for `platforms/winpack_dldt/2021.1/`

## Scope

This keyword index covers **all files** under `platforms/winpack_dldt/2021.1/` recursively, including all subdirectories.

**Statistics:**
- **Total Files in Subtree**: 5
- **Total Unique Keywords**: 222
- **Direct Files**: 5
- **Subfolders**: 0

## Keywords A-Z

The following keywords, identifiers, and technical terms appear in files within this subtree:


### A

**ALIAS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**APPEND** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**a2550bfa** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**a4543745** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**a7bac7e9** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add_common_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add_cpplint_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add_graph_transformer_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add_library** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**add_subdirectory** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**always** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**and** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**applyPatch** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**are** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### B

**b291d5b4** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**b30e6671** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**base** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**bin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**build_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_config** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_debug** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**built** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### C

**CMAKE_CURRENT_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_CXX_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_MODULE_PATH** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMAKE_SHARED_LINKER_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**CMakeLists** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**Create** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**cache** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**clDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cmake** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**common** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**config** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**configure_file** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**copy_bin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copy_dll** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copytree** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cpp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**cross_compiled_file** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### D

**DEBUG** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**Debug** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**Developer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**def** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**deployment_tools** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**developer_package_config** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**diff** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**directory** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**disable** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**disabled** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**dldt** - Found in 5 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**dll** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**dll_suffix** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### E

**ENABLE_TESTS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**EXCLUDE_FROM_ALL** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ed87a073** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**elf** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**else** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**endfunction** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**endif** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**engine** - Found in 4 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**etc** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**even** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### F

**FALSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**FOR_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**FOR_TARGETS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**f4fed72a** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**file** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**flags** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**for** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**format_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**from** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**function** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### G

**GLOB_RECURSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**gflags** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**git** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**global** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**graph** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**graph_transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### H

**HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**HeteroPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**hetero_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))

**hpp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### I

**ICF** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**IE_BASE_SOURCE_FILES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**IE_MAIN_SOURCE_DIR** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**IMPLEMENT_INFERENCE_ENGINE_API** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**INTERFACE_INCLUDE_DIRECTORIES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ie_build_samples** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ie_developer_export** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ie_developer_export_targets** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ie_register_plugins** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**include** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**index** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**inference** - Found in 4 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_ir_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_ir_readerd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_legacy** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_legacyd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_lp_transformations** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_preproc_s** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**inference_engine_transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engined** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inside** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**install** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**intel64** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**interpreter_backend** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### J

**json** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### K

**kept** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### L

**LIBRARY_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**LIBRARY_SRC** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**LICENSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**legacy_api** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**lib** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**library** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**licenses** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**list** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))


### M

**MAIN_TARGET** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**MKLDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**MultiDevicePlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2450** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma248x** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2x8x** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**mkldnn_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**multi_device** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))

**multidevice** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**must** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**mvcmd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**myriadPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### N

**NGRAPH_INTERPRETER_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**NGRAPH_LIBRARIES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**name** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraph** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraph_backend** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**ngraphd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**not** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### O

**OBJECT** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**OPT** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**OpenVINO** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**OpenVINO_MAIN_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**object** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### P

**PRIVATE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**PUBLIC_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**package** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**patch** - Found in 4 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**pcie** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**pdb** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**platforms** - Found in 5 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**plugin_api_sr** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**plugins** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**prepare_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**preprocessing** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**project** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))


### R

**REF** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**Release** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**required** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**rm_one** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**runtime** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### S

**SAMPLES_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**STATIC** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**SYSTEM** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**Static** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**same** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**sample_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**samples** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**self** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**set** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))

**set_ie_threading_interface_for** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**should** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**src** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**srcdir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**support** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**sysroot** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_lib_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_license_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysrootdir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### T

**TARGET_NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**TARGET_OBJECTS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**TARGET_PROPERTY** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**TRUE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**Template** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**target_compile_definitions** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**target_include_directories** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**targets** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**tbb** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**temp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**test** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**tests** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**the** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**they** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**thirdparty** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**tools** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))

**transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**txt** - Found in 3 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))


### U

**Unit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**unit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**unused** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**usb** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**used** - Found in 2 files:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### V

**vpu** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**vpu_graph_transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**vpu_graph_transformer_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### W

**WIN32** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**which** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**winpack_dldt** - Found in 5 files:
  - [platforms/winpack_dldt/2021.1/20200604-dldt-disable-multidevice.patch](20200604-dldt-disable-multidevice.patch_docs.md) ([keywords](20200604-dldt-disable-multidevice.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/20200413-dldt-pdb.patch](20200413-dldt-pdb.patch_docs.md) ([keywords](20200413-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.1/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**with** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))


### X

**xml** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### _

**_common_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**_legacy_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))

**_plugin_api_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2021.1/20201005-dldt-disable-unused-targets.patch](20201005-dldt-disable-unused-targets.patch_docs.md) ([keywords](20201005-dldt-disable-unused-targets.patch_kw.md))



## Folder-Level Navigation

### Keyword Distribution by Subfolder



### Most Common Keywords

The most frequently appearing keywords in this subtree:

- **platforms**: 5 occurrences
- **dldt**: 5 occurrences
- **winpack_dldt**: 5 occurrences
- **inference**: 4 occurrences
- **patch**: 4 occurrences
- **engine**: 4 occurrences
- **endif**: 3 occurrences
- **git**: 3 occurrences
- **txt**: 3 occurrences
- **diff**: 3 occurrences
- **CMakeLists**: 3 occurrences
- **index**: 3 occurrences
- **disable**: 3 occurrences
- **pdb**: 3 occurrences
- **multidevice**: 2 occurrences
- **add_subdirectory**: 2 occurrences
- **src**: 2 occurrences
- **IE_MAIN_SOURCE_DIR**: 2 occurrences
- **OpenVINO**: 2 occurrences
- **targets**: 2 occurrences
- **used**: 2 occurrences
- **inference_engine**: 2 occurrences
- **else**: 2 occurrences
- **unused**: 2 occurrences
- **cmake**: 2 occurrences
- **inference_engine_lp_transformations**: 2 occurrences
- **config**: 2 occurrences
- **hetero_plugin**: 1 occurrences
- **multi_device**: 1 occurrences
- **transformations**: 1 occurrences
- **add_graph_transformer_target**: 1 occurrences
- **_common_obj**: 1 occurrences
- **legacy_api**: 1 occurrences
- **common**: 1 occurrences
- **TARGET_OBJECTS**: 1 occurrences
- **from**: 1 occurrences
- **vpu**: 1 occurrences
- **built**: 1 occurrences
- **a2550bfa**: 1 occurrences
- **build**: 1 occurrences
- **they**: 1 occurrences
- **SOURCES**: 1 occurrences
- **vpu_common_lib_test_static**: 1 occurrences
- **GLOB_RECURSE**: 1 occurrences
- **samples**: 1 occurrences
- **should**: 1 occurrences
- **NGRAPH_LIBRARIES**: 1 occurrences
- **Unit**: 1 occurrences
- **TRUE**: 1 occurrences
- **always**: 1 occurrences
- **same**: 1 occurrences
- **test**: 1 occurrences
- **FOR_TARGETS**: 1 occurrences
- **endfunction**: 1 occurrences
- **support**: 1 occurrences
- **vpu_graph_transformer_test_static**: 1 occurrences
- **developer_package_config**: 1 occurrences
- **PUBLIC_HEADERS**: 1 occurrences
- **IE_BASE_SOURCE_FILES**: 1 occurrences
- **ALIAS**: 1 occurrences
- **IMPLEMENT_INFERENCE_ENGINE_API**: 1 occurrences
- **object**: 1 occurrences
- **with**: 1 occurrences
- **NGRAPH_INTERPRETER_ENABLE**: 1 occurrences
- **unit**: 1 occurrences
- **configure_file**: 1 occurrences
- **inference_engine_preproc_s**: 1 occurrences
- **ie_register_plugins**: 1 occurrences
- **b291d5b4**: 1 occurrences
- **LIBRARY_SRC**: 1 occurrences
- **Create**: 1 occurrences
- **WIN32**: 1 occurrences
- **ngraph_backend**: 1 occurrences
- **Developer**: 1 occurrences
- **OBJECT**: 1 occurrences
- **sample_cpplint**: 1 occurrences
- **LIBRARY_HEADERS**: 1 occurrences
- **format_reader**: 1 occurrences
- **STATIC**: 1 occurrences
- **disabled**: 1 occurrences
- **PRIVATE**: 1 occurrences
- **INTERFACE_INCLUDE_DIRECTORIES**: 1 occurrences
- **ed87a073**: 1 occurrences
- **add_library**: 1 occurrences
- **b30e6671**: 1 occurrences
- **HEADERS**: 1 occurrences
- **Template**: 1 occurrences
- **plugin**: 1 occurrences
- **interpreter_backend**: 1 occurrences
- **cross_compiled_file**: 1 occurrences
- **SYSTEM**: 1 occurrences
- **tools**: 1 occurrences
- **package**: 1 occurrences
- **hpp**: 1 occurrences
- **thirdparty**: 1 occurrences
- **TARGET_NAME**: 1 occurrences
- **graph**: 1 occurrences
- **for**: 1 occurrences
- **even**: 1 occurrences
- **mkldnn_plugin**: 1 occurrences
